# rust-to-cobol-compiler

./: Cargo.toml  README.md
src/: ast.rs  async_transform.rs  backend.rs  closure_transform.rs  code_generator.rs  compiler.rs  frontend_rustc.rs  lexer.rs  lib.rs  lifetime_erasure.rs  macro_expansion.rs  main.rs  mir_lowering.rs  monomorphizer.rs  parser.rs  semantic_analyzer.rs  trait_resolution.rs  transpile.rs
tests/: unit_tests.rs
